Pull request #288: fix/AG-6874 hide eye icon from password in edge
Merge in EXTENSIONS/vpn-extension from fix/AG-6874 to master

Squashed commit of the following:

commit b91a36b4f11ba362cd90cfea8406fa40dfe954eb
Merge: 7006028 53f5194
Author: Maxim Topciu <maximtop@gmail.com>
Date:   Tue May 11 17:41:52 2021 +0300

    Merge branch 'master' into fix/AG-6874

commit 700602806eb693236e64eaa4fbe3078e784953a5
Author: anton <a.kaprielov@adguard.com>
Date:   Fri May 7 12:08:09 2021 +0300

    fix/AG-6874 hide eye icon from password in edge

--- a/src/popup/styles/form.pcss
+++ b/src/popup/styles/form.pcss
@@ -65,6 +65,11 @@
         padding: 5px 15px;
         box-shadow: none;
 
+        &::-ms-reveal,
+        &::-ms-clear {
+            display: none;
+        }
+
         &::placeholder {
             font-size: 1.4rem;
             color: var(--gray-base);
